test/compile_fail/effect_writer_context_removed.zig
const shift = @import("shift");

comptime {
    _ = shift.effect.writer.Context;
}
